--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,23 @@
 {
-    "short_name": "title",
-    "name": "title",
+    "short_name": "SecretChat",
+    "name": "SecretChat",
     "icons": [
       {
-        "src": "/public/images/miniLogoWebnet.png",
+        "src": "/public/img/miniLogo.svg",
         "sizes": "192x192",
         "type": "image/png"
       }
     ],
     "icons": [
       {
-       "src":"/public/images/logoWebnet.png",
+       "src":"/public/img/logo.svg",
        "sizes": "512x512",
        "type": "image/png"
       }
     ],
     "start_url": "/",
-    "background_color": "rgb(0, 173, 239)",
-    "theme_color": "rgb(0, 173, 239)",
+    "background_color": "rgb(23,26,33)",
+    "theme_color": "rgb(23,26,33)",
     "display": "fullscreen",
     "prefer_related_applications": false
   }
