new version v 0.02Beta

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
     "name": "SecretChat",
     "icons": [
       {
-        "src": "/public/img/miniLogo.svg",
+        "src": "/public/img/miniLogo.png",
         "sizes": "192x192",
         "type": "image/png"
       }
     ],
     "icons": [
       {
-       "src":"/public/img/logo.svg",
+       "src":"/public/img/logo.png",
        "sizes": "512x512",
        "type": "image/png"
       }
