--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 
-AddDefaultCharset utf-8
+#AddDefaultCharset utf-8
 
-Options +FollowSymlinks
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+#Options +FollowSymlinks
+#RewriteEngine On
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^ index.php [L]
+#RewriteRule ^ index.php [L]
